<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ScanActivity" >

        <item android:id="@+id/menu_scan"
            android:title="@string/menu_scan"
            android:icon="@android:drawable/ic_menu_share"
            android:orderInCategory="1"
            android:showAsAction="withText|ifRoom"/>
        <item android:id="@+id/menu_create"
            android:title="create"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:orderInCategory="2"
            android:showAsAction="withText|ifRoom"/>
        <item android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:orderInCategory="3"
            android:showAsAction="never"/>
        <item android:id="@+id/menu_help"
            android:title="@string/menu_help"
            android:icon="@android:drawable/ic_menu_help"
            android:orderInCategory="4"
            android:showAsAction="withText|ifRoom"/>
</menu>
